# EdenEngine

./: .gitignore  CMakeLists.txt  main.cpp
Docs/: Vulkan Init.md
Source/Runtime/: Main.cpp
Source/Runtime/Core/Display/: MacDisplay.cpp  MacDisplay.h  MacDisplay.mm  WindowsDisplay.cpp  WindowsDisplay.h
Source/Runtime/Core/RHI/: IRHI.h
Source/Runtime/Core/RHI/Metal/: MetalRHI.h  MetalRHI.mm
Source/Runtime/Core/RHI/Vulkan/: VulkanRHI.cpp  VulkanRHI.h
src/: Actor.cpp  Actor.hpp  Camera.hpp  Light.hpp  Material.cpp  Model.cpp  Model.hpp  Object.cpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp  Triangle.cpp  Triangle.hpp  main.cpp
src/Display/: WindowManager.cpp  WindowManager.hpp
src/Drawer/: BlinnPhongDrawer.cpp  BlinnPhongDrawer.hpp  Drawer.cpp  Drawer.hpp  PhongDrawer.cpp  PhongDrawer.hpp
src/Geometry/: Triangle.hpp
src/Material/: Material.cpp  Material.hpp  Texture.cpp  Texture.hpp
src/Render/: GLRenderer.cpp  GLRenderer.hpp  ObjRender.cpp  ObjRender.hpp  Renderer.cpp  Renderer.hpp  SBlinnPhongRenderer.cpp  SBlinnPhongRenderer.hpp  SRenderer.cpp  SRenderer.hpp  SoftwareRenderer.cpp  SoftwareRenderer.hpp
src/RenderInfo/: PhongRenderInfo.cpp  PhongRenderInfo.hpp  RenderInfo.cpp  RenderInfo.hpp
src/Scene/: Actor.cpp  Actor.hpp  Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  Triangle.hpp
src/Shader/: Shader.cpp  Shader.hpp
src/Shader/Phong/: PhongFSH.glsl  PhongVSH.glsl
src/Shaders/: SoftFSH.glsl  SoftVSH.glsl
src/Utils/: EEMath.hpp  MeshReader.cpp  MeshReader.hpp  ShaderReader.cpp  ShaderReader.hpp
src/util/: ModelReader.cpp  ModelReader.hpp
